--- a/contact/build.gradle
+++ b/contact/build.gradle
@@ -18,12 +18,14 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 jar {
-	baseName = 'SpringExamples'
-	version = '0.1.0'
+	baseName = 'gs-accessing-data-jpa'
+    version =  '0.1.0'
 }
 repositories {
 	mavenCentral()
+	maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
